--- a/src/components/PluginSettings/styles.css
+++ b/src/components/PluginSettings/styles.css
@@ -23,12 +23,19 @@
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
 }
 
+.vc-plugins-pin-button {
+    height: 24px;
+    width: 24px;
+    padding: 0;
+    background: transparent;
+}
+
 .vc-plugins-info-button {
     height: 24px;
     width: 24px;
     padding: 0;
     background: transparent;
-    margin-right: 8px;
+    margin-right: 4px;
 }
 
 .vc-plugins-settings-button:hover {
@@ -81,5 +88,10 @@
 }
 
 .vc-plugins-info-button svg:not(:hover, :focus) {
+    color: var(--text-muted);
+}
+
+
+.vc-plugins-pin-button svg:not(:hover, :focus) {
     color: var(--text-muted);
 }
