fix and toggle css

--- a/src/plugins/showCharCount/style.css
+++ b/src/plugins/showCharCount/style.css
@@ -1,7 +1,7 @@
-/* div[class^=inner]>div[class^=buttons__] { */
-/*   margin-right: 10px; */
-/* } */
-/**/
-/* .indentCharacterCount_c3be95 { */
-/*   right: -23px; */
-/* } */
+div[class^=inner]>div[class^=buttons_] {
+  margin-right: 10px;
+}
+
+[class^=indentCharacterCount_] {
+  right: -23px;
+}
