--- a/src/plugins/showCharacterCount/style.css
+++ b/src/plugins/showCharacterCount/style.css
@@ -5,3 +5,6 @@ div[class^=inner]>div[class^=buttons_] {
 [class^=indentCharacterCount_] {
   right: -23px;
 }
+[class^=characterCount_] [class^=premiumFlair_b82429]{
+  display: none;
+}
